# NTree

./: .gitignore  CMakeLists.txt  N-tree.pro  README.md  cmdargparser.h  main.cpp  ntree.cpp  ntree.h  ntreeserializer.cpp  ntreeserializer.h  printtree.cpp  printtree.h  typeserializers.cpp  typeserializers.h  utility.cpp  utility.h
data/: input.data
include/: ntreeserializer.h  printtree.h  typeserializers.h  utility.h
src/: cmdargparser.cpp  main.cpp  ntreeserializer.cpp  printtree.cpp  typeserializers.cpp  utility.cpp
